--- a/scrapii/pom.xml
+++ b/scrapii/pom.xml
@@ -35,11 +35,7 @@
     <version>2.47.1</version>
   </dependency>
 
-	
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-webflux</artifactId>
-</dependency>
+
  
    <dependency>
      <groupId>org.springframework</groupId>
@@ -68,6 +64,12 @@
      <artifactId>spring-security-oauth2</artifactId>
      <version>2.5.2.RELEASE</version>
    </dependency>
+ 
+  <dependency>
+    <groupId>org.bytedeco</groupId>
+    <artifactId>javacv-platform</artifactId>
+    <version>1.5.9</version>
+  </dependency>
  </dependencies>
 
 	<build>
